Hover issue fix for scrollbar

--- a/client/src/styles/base/base.scss
+++ b/client/src/styles/base/base.scss
@@ -75,8 +75,9 @@ a:hover {
 
 ::-webkit-scrollbar-thumb {
   background: $accent-color;
+  transition: 0.4s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: ghostwhite;
+  background: $main-color;
 }
